# score_es_benchmark

./: .gitignore  README.md  build.sh  config.yaml  data_generator.py  earth_mover_perf.py  earth_mover_perf.sh  earth_mover_perf_v2_float32.py  earth_mover_perf_v2_float64.py  earth_mover_surface.py  environment-gpu.yaml  environment.yaml  main.py  postprocess.py  postprocess_1.py  postprocess_2.py  postprocess_3.py  postprocess_4.py  postprocess_5.py  profiler.py  pyproject.toml  requirements.txt  setup.py  stats_workflow_perf.py  stats_workflow_perf.sh  stats_workflow_uq.py  torch_utilities.py  utest.py  utilities.py
configs/: config.large.c.yaml  config.large.numpy.yaml  config.medium.c.yaml  config.small.c.yaml  config.small.numpy.yaml  config.surface.yaml  config.uq.yaml
impls/: __init__.py  c_impl.py  c_impl_backend.c  numba_impl.py  original.py  python_impl.py
impls/c_v1/: __init__.py  c_impls.c
impls/c_v2/: __init__.py  c_impls.c
impls/c_v3/: __init__.py  c_impls.c
impls/c_v4/: __init__.py  c_impls.c
quantom_prototype/envs/loss/earth_mover_loss/: __init__.py
quantom_prototype/envs/loss/earth_mover_loss/impls/: __init__.py  c_impl_v2.cpp  c_impls.cpp  original.py  private.hpp
quantom_toolkit_py/envs/loss/earth_mover_loss/impls/: __init__.py  c_impl_v1.cpp  c_impl_v3.cpp  c_impl_v4.cpp  numba_impl.py  original.py
repro_packs/2023_scidac_pi_meeting/: earth_mover_perf.sh  earth_mover_surface.py  postprocess_5.py  stats_workflow_uq.sh
repro_packs/2023_scidac_pi_meeting/configs/: config.medium.numpy.yaml
